[-] * Minor fixes in gammu-config script.
[-] * Extra spaces from connection or device name are now stripped.
[-] * Automatically reinitialize FBUS connection if it is dropped.
[-] * Disable OBEX with Motorola Z6c, it is broken (bug #746).
[-] * Refresh manufacturer information on second init of AT (bug #746).
[-] * Always get charset information on AT phone initialization.
    
20081020 - 1.21.90

[-] * Sign Windows binaries during build.
[-] * Detect long FM station names (bug #727).
[-] * Add ID for Nokia 2630b.
[-] * Handle properly very long lines in vcards (bug #728).
[-] * Do not build and install locales if gettext is not compiled.
[-] * Increase number of calendar entries (bug #725).
[-] * Leak free test runs.
[+] * Support backup of phone phonebook from Siemens (bug #732).
[+] * Properly handle GetNextMemory on Siemens (bug #732).
[+] * Save textual category to backup (bug #737).
[+] * Enable dashboard testing using CTest/CDash.
[+] * Add option to do coverage analysis.
[-] * Properly handle debug file closing.
[-] * Add test case for debug logging.
[-] * Fix decoding of some SMS messages from Nokia phones (bug #735).
[-] * Hack for (still) unknown error code (bug #733).
    
20081003 - 1.21.0
    
[-] * Handle properly empty SMSC (bug #722).
[-] * Disable AT/OBEX for Motorola K1v (bug #721).
    
20080926 - 1.20.94

[-] * Automatically switch to nodtr connection if DTR/RTS setting fails.
[-] * More verbose debug messages in API.
[-] * Free phone data after testing model to avoid memory leaks.
[-] * Properly handle if IMEI is too long (bug #709).
[-] * Try to handle situation when CMGL does not list all messages.
[-] * Fix typo in MySQL file (bug #716).
[-] * Better parsing of USSD replies (bug #718).
[-] * Properly restore caller groups on Nokia 2630 (bug #706).
[-] * Fix listing of used calendar locations on Nokia (bug #710).
[-] * Properly encode class and coding to SMS (bug #714).
[-] * SMSD for MySQL no longer fails when sending message (bug #715).