@@ -24,6 +24,7 @@ ChangeLog
 [-] * Disable OBEX with Motorola Z6c, it is broken (bug #746).
 [-] * Refresh manufacturer information on second init of AT (bug #746).
 [-] * Always get charset information on AT phone initialization.
+[-] * Better handling of OBEX switching for Siemens phones.
     
 20081020 - 1.21.90
 
